force-app/main/default/objects/Case/fields/AAD_Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAD_Pending_Reason__c</fullName>
    <label>AAD Pending Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AAD_Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RG001 - ส่งงานผิด Flow</fullName>
            </value>
            <value>
                <fullName>RG004 - ลูกค้าต่อรองเรื่องค่าใช้จ่าย หลัง Survey</fullName>
            </value>
            <value>
                <fullName>RG005 - ลูกค้าเลื่อนนัด</fullName>
            </value>
            <value>
                <fullName>RG006 - เอกสารกรรมสิทธิ์สิ่งปลูกสร้างไม่ครบถ้วน</fullName>
            </value>
            <value>
                <fullName>RG008 - ลูกค้าติดปัญหาวงเงินเดิม</fullName>
            </value>
            <value>
                <fullName>RG009 - ลูกค้าต่อรองเรื่องค่าใช้จ่ายในการประเมินราคา</fullName>
            </value>
            <value>
                <fullName>RG010 - ไม่มีเอกสารกรรมสิทธิ์สิ่งปลูกสร้าง</fullName>
            </value>
            <value>
                <fullName>RG011 - BDM - แจ้งชลอเรื่อง</fullName>
            </value>
            <value>
                <fullName>RG012 - ลูกค้าขอเปลี่ยนแปลงหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RG013 - ไม่มีใบนัดสำรวจและประเมินราคาหลักทรัพย์ในระบบ ECM</fullName>
            </value>
            <value>
                <fullName>RG014 - ไม่มีสำเนาโฉนด/นส.3/นส.3ก ในระบบ ECM</fullName>
            </value>
            <value>
                <fullName>RG015 - ไม่สามารถติดต่อลูกค้าได้</fullName>
            </value>
            <value>
                <fullName>RG016 - ลูกค้าไม่รับนัดสำรวจหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RG017 - ลูกค้าไม่สะดวกให้เข้าสำรวจหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RO001 -  ลูกค้าต่อรองเรื่องค่าใช้จ่ายในการประเมินราคา</fullName>
            </value>
            <value>
                <fullName>RO002 - ลูกค้าเลื่อนนัดสำรวจหลักทรัพย์ไม่มีกำหนด</fullName>
            </value>
            <value>
                <fullName>RO003 - เอกสารกรรมสิทธิ์สิ่งปลูกสร้างไม่ครบถ้วน</fullName>
            </value>
            <value>
                <fullName>RO004 - ลูกค้ามีรอการแบ่งแยกโฉนด</fullName>
            </value>
            <value>
                <fullName>RO005 - ข้อมูลในเอกสารสิทธิ์หลักประกันไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>RO006 - ลูกค้าไม่สะดวกให้เข้าสำรวจหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RO007 - ลูกค้าขอเปลี่ยนแปลงหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RO008 - ลูกค้าไม่รับนัดสำรวจหลักประกัน</fullName>
            </value>
            <value>
                <fullName>RO009 - ลูกค้าขอเวลาปรึกษาผู้เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>RO010 - ลูกค้ายังไม่สะดวกสนทนา</fullName>
            </value>
            <value>
                <fullName>RO011 - ลูกค้าขอติดต่อ BDM ก่อน เนื่องจาก…(กรุณาระบุเหตุผลชัดเจนเพิ่มใน Comment)</fullName>
            </value>
            <value>
                <fullName>RO012 - เบอร์ติดต่อลูกค้าไม่ถูกต้อง</fullName>
            </value>
            <value>
                <fullName>RO013 - เบอร์ติดต่อลูกค้าไม่มีผู้รับสาย</fullName>
            </value>
            <value>
                <fullName>RO014 - เบอร์ติดต่อสายไม่ว่าง</fullName>
            </value>
            <value>
                <fullName>RO015 - ปิดโทรศัพท์</fullName>
            </value>
            <value>
                <fullName>RO016 - ไม่มีสัญญาณโทรศัพท์</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>