force-app/main/default/objects/Case/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>if( OR(ISPICKVAL(Status, &apos;Completed&apos;),ISPICKVAL(Status, &apos;Cancel&apos;)),ClosedDate - CreatedDate , NOW() - CreatedDate)</formula>
    <label>Aging (Day) (Include Weekend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>