force-app/main/default/objects/Case/fields/All_Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>All_Previous_Owner__c</fullName>
    <description>This field for use to filter Case outbox. Store all previous owner.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>All Previous Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>