force-app/main/default/objects/Case/fields/Amount_Received_Deposit_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_Deposit_to_Account__c</fullName>
    <label>จำนวนเงิน (ได้รับ/ฝากเข้าบัญชี)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>