force-app/main/default/objects/Case/fields/Amount_Withdrawal_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Withdrawal_Deposit__c</fullName>
    <label>จำนวนเงิน (ถอน/ฝาก)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>