force-app/main/default/objects/Case/fields/Appraisal_Area__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Area__c</fullName>
    <label>Appraisal Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>กรุงเทพฯ</fullName>
            </value>
            <value>
                <fullName>ต่างจังหวัด</fullName>
            </value>
            <value>
                <fullName>Case พิเศษ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>