force-app/main/default/objects/Case/fields/Appraisal_Company_1__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Company_1__c</fullName>
    <label>Appraisal Company 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>บริษัท โคมายด์ อัลลายน์เอนซ์ เรียล เอสเตท จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เคแทค แอพเพรซัล แอนด์ เซอร์วิส จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แพนซ์ อินทิเกรดเต็ด พร๊อพเพอร์ตี้ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ทรู แวลูเอชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แวลูแอสเซ็ท จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ชาเตอร์ แวลูเอชั่น แอนด์ คอนซัลแตนท์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เวลท์ แอพไพรซัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ที.เอ.มาเนจเม้นท์ คอร์โปเรชั่น (1999) จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ควอลิตี้ แอพไพรซัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท บางกอก แวลูเอชั่น แอนด์ คอนซัลแตนท์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท โกร เอสทิเมชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ซีพีเอ็ม แคปปิทัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เบรนท์โจ โคเซนส์ คอนซัลติ้ง จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เค.ที.แอพไพรซัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ไทยเซอร์เวเยอร์ แอนด์ แอ็ดไวท์เซอร์รี่ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แอสเซ็ทเอเซีย คอร์ปอเรชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท โนเบิ้ล พร็อพเพอร์ตี้ แวลูเอชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แอดวานซ์ พร๊อพเพอร์ตี้ แอนด์ คอนซัลแทนท์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ทีเอพี แวลูเอชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เยนเนอรัล แวลูเอชั่น แอนด์ คอนซัลแตนท์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แอดวานซ์ แอพไพรซัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท จี.พี.วี.โกลบอล พร็อพเพอร์ตี้ แวลูเอชั่น จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แกรนด์ แอสเซท แอดไวเซอรี่ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท โมเดิร์น พร็อพเพอร์ตี้ คอนซัลแตนท</fullName>
            </value>
            <value>
                <fullName>บริษัท เอเชี่ยน เอ็นจิเนียริ่ง แวลูเอชั่น</fullName>
            </value>
            <value>
                <fullName>บริษัท ซิมส์ พร็อพเพอร์ตี้ คอนซัลแทนท์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท ฟานิก แอพเพรซัล จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท อเมริกัน แอ๊พเพรซัล (ประเทศไทย) จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท แลนด์มาร์ค คอนซัลแทนส์ จำกัด</fullName>
            </value>
            <value>
                <fullName>บริษัท เอเจนซี่ ฟอร์ เรียลเอสเตท แอฟแฟร์ส จำกัด</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>