force-app/main/default/objects/Case/fields/Appraisal_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Date_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appraisal Date 2</label>
    <type>Date</type>
</CustomField>