force-app/main/default/objects/Case/fields/ATM_ADM_Code__c.field-meta.xml
<CustomField>
    <fullName>ATM_ADM_Code__c</fullName>
    <formula>ATM_ADM_Location__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATM/ADM Code</label>
    <type>Text</type>
</CustomField>