force-app/main/default/objects/Case/fields/ATM_ADM_Location__c.field-meta.xml
<CustomField>
    <fullName>ATM_ADM_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATM/ADM Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ATM_ADM__c.Enable_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ATM_ADM__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>