force-app/main/default/objects/Case/fields/ATM_ADM_Number__c.field-meta.xml
<CustomField>
    <fullName>ATM_ADM_Number__c</fullName>
    <description>This field for send to DWH only</description>
    <formula>ATM_ADM_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATM/ADM Number</label>
    <type>Text</type>
</CustomField>