force-app/main/default/objects/Case/fields/ATM_Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>ATM_Dispute_Reason__c</fullName>
    <label>ATM Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 ขอตรวจสอบรายการ ครั้งที่ 2</fullName>
            </value>
            <value>
                <fullName>2 ขอตรวจสอบรายการ ครั้งที่ 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>