force-app/main/default/objects/Case/fields/Authorize_1__c.field-meta.xml
<CustomField>
    <fullName>Authorize_1__c</fullName>
    <label>Authorize 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>นางกันทิมา คงทน  (CF3)</fullName>
            </value>
            <value>
                <fullName>นางอมรรัตน์ โชคท่าพระ  (CF3)</fullName>
            </value>
            <value>
                <fullName>นางสุพัตรา แย้มแสงสังข์ (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.ชุติกาญจน์ นาคปฐม (CF4)</fullName>
            </value>
            <value>
                <fullName>นายนัทธี ถีระพงศ์  (CF3)</fullName>
            </value>
            <value>
                <fullName>นางธัญญพัทธ์ ศิริพัฒน์ธนากร (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.เสาวลักษณ์ ถึงศรีปั้น  (CF4)</fullName>
            </value>
            <value>
                <fullName>นายชัชมณินทร์ เจริญวรรณกูล (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.เพ็ญสิริ ดีภาพร  (CF3)</fullName>
            </value>
            <value>
                <fullName>นางกรุณา เหล่าประชัยวัลย์ (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.เบญจมาศ วัฒนะโชติ  (CF3)</fullName>
            </value>
            <value>
                <fullName>น.ส.เพลินจิตร ตันติพิพัฒนา (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.ศิริพร สุประพาส (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.กานต์ธีรา แก้วแท้  (CF3)</fullName>
            </value>
            <value>
                <fullName>น.ส.สุภิดา นาคะเกศ (CF4)</fullName>
            </value>
            <value>
                <fullName>นายเกษมศักดิ์ ภาณุทัตภิญโญ (CF4)</fullName>
            </value>
            <value>
                <fullName>น.ส.จารุวรรณ ขุนประเสริฐ (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.รวิวรรณ นันตา  (CF4)</fullName>
            </value>
            <value>
                <fullName>นายธีรเดช วิริยะ  (CF7)</fullName>
            </value>
            <value>
                <fullName>น.ส.อัญชนา รัตนวัจ (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.อมรรัตน์ ภู่ให้ผล (CF4)</fullName>
            </value>
            <value>
                <fullName>นายพิสิษฐ์  ว่องธีรกิจโกศล (CF5)</fullName>
            </value>
            <value>
                <fullName>นางจุฑามาศ เกิดก่อแก้ว (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.สาริศา ควรเดชะคุปต์ (CF5)</fullName>
            </value>
            <value>
                <fullName>นายศุภชัย หลิมสกุล (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.สุภาพร เจนกุลประสูตร (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.สุธาดา รสน้อย (CF6)</fullName>
            </value>
            <value>
                <fullName>น.ส.ณัฐชนันท เจริญผล (CF5)</fullName>
            </value>
            <value>
                <fullName>นายชวนัท อรุณไพร (CF5)</fullName>
            </value>
            <value>
                <fullName>น.ส.กรมิษฐ์ บุญเกิด (CF3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>