force-app/main/default/objects/Case/fields/Biller_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Biller_Provider_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Biller/Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>