force-app/main/default/objects/Case/fields/Branch_ATM_Shop_Location_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Branch_ATM_Shop_Location_Transaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>สาขา/ตู้/ร้านค้า/สถานที่ที่ทำรายการ</label>
    <type>TextArea</type>
</CustomField>