force-app/main/default/objects/Case/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Code</label>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>