force-app/main/default/objects/Case/fields/BRC_User_Email__c.field-meta.xml
<CustomField>
    <fullName>BRC_User_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BRC User Email</label>
    <type>Email</type>
</CustomField>