force-app/main/default/objects/Case/fields/Bulk_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS</label>
    <type>Checkbox</type>
</CustomField>