force-app/main/default/objects/Case/fields/Call_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Log ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>