force-app/main/default/objects/Case/fields/Call_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Number</label>
    <type>Phone</type>
</CustomField>