force-app/main/default/objects/Case/fields/Call_Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Start Datetime</label>
    <type>DateTime</type>
</CustomField>