force-app/main/default/objects/Case/fields/Card_Comment__c.field-meta.xml
<CustomField>
    <fullName>Card_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Comment</label>
    <type>TextArea</type>
</CustomField>