force-app/main/default/objects/Case/fields/Card_No1_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Card_No1_Encrypted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card No1 Encrypted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>