force-app/main/default/objects/Case/fields/Card_No2_Temp__c.field-meta.xml
<CustomField>
    <fullName>Card_No2_Temp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card No2.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>