force-app/main/default/objects/Case/fields/Card_No__c.field-meta.xml
<CustomField>
    <fullName>Card_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card No1.</label>
    <length>16</length>
    <type>Text</type>
</CustomField>