force-app/main/default/objects/Case/fields/Card_No_Full__c.field-meta.xml
<CustomField>
    <fullName>Card_No_Full__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Card No1. (Full)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>