force-app/main/default/objects/Case/fields/CCRP_Number__c.field-meta.xml
<CustomField>
    <fullName>CCRP_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CCRP Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>