force-app/main/default/objects/Case/fields/Cheque_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Ordered_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Ordered Date</label>
    <type>Date</type>
</CustomField>