force-app/main/default/objects/Case/fields/Close_Status__c.field-meta.xml
<CustomField>
    <fullName>Close_Status__c</fullName>
    <description>This field for use in report only</description>
    <formula>if( FCR__c = true, &quot;FCR&quot;,
  if( Is_Over_SLA__c = 1, &quot;Over SLA&quot;, &quot;Within SLA(Non FCR)&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Status</label>
    <type>Text</type>
</CustomField>