force-app/main/default/objects/Case/fields/Closed_by__c.field-meta.xml
<CustomField>
    <fullName>Closed_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed by</label>
    <length>120</length>
    <type>Text</type>
</CustomField>