force-app/main/default/objects/Case/fields/Closed_By_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By Branch Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>