force-app/main/default/objects/Case/fields/Closed_By_BU__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_BU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By BU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>