force-app/main/default/objects/Case/fields/Closed_By_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed By Region Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>