force-app/main/default/objects/Case/fields/Correct_Bank_Recipient_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Correct_Bank_Recipient_Account_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>เลขที่บัญชีที่ถูกต้อง</label>
    <length>175</length>
    <type>Text</type>
</CustomField>