force-app/main/default/objects/Case/fields/Correct_Recipient_Bank__c.field-meta.xml
<CustomField>
    <fullName>Correct_Recipient_Bank__c</fullName>
    <label>ธนาคารผู้รับโอนที่ถูกต้อง</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIG Retail Bank PCL. (AIGB)</fullName>
            </value>
            <value>
                <fullName>CHINA UNION PAY (CUP)</fullName>
            </value>
            <value>
                <fullName>GE Money Retail Bank (GEMB)</fullName>
            </value>
            <value>
                <fullName>MALAYSIAN ELECTRONIC PAYMENT SYSTEMS (MEPS)</fullName>
            </value>
            <value>
                <fullName>Standard Charter Bank (Thai) PCL. (SCBT)</fullName>
            </value>
            <value>
                <fullName>Thai Credit Retail Bank (TCRB)</fullName>
            </value>
            <value>
                <fullName>ธ.กรุงศรีอยุธยา (BAY)</fullName>
            </value>
            <value>
                <fullName>ธ.กรุงเทพ (BBL)</fullName>
            </value>
            <value>
                <fullName>ธ.กรุงไทย (KTB)</fullName>
            </value>
            <value>
                <fullName>ธ.กสิกรไทย (KBNK)</fullName>
            </value>
            <value>
                <fullName>ธ.การเกษตรและสหกรณ์การเกษตร (BAAC)</fullName>
            </value>
            <value>
                <fullName>ธ.ซิตี้แบงก์ (CITI)</fullName>
            </value>
            <value>
                <fullName>ธ.ทหารไทย (TMB)</fullName>
            </value>
            <value>
                <fullName>ธ.ธนชาติ (TBNK)</fullName>
            </value>
            <value>
                <fullName>ธ.นครหลวงไทย (SCIB)</fullName>
            </value>
            <value>
                <fullName>ธ.ยูโอบี จำกัด (มหาชน) (UOBT)</fullName>
            </value>
            <value>
                <fullName>ธ.ออมสิน (GSB)</fullName>
            </value>
            <value>
                <fullName>ธ.อาคารสงเคราะห์ (GHB)</fullName>
            </value>
            <value>
                <fullName>ธ.ฮ่องกงและเซี่ยงไฮ้ (HSBL)</fullName>
            </value>
            <value>
                <fullName>ธ.โตเกียวมิตซูบิชิ (BTMU)</fullName>
            </value>
            <value>
                <fullName>ธ.ไทยธนาคาร (BTB)</fullName>
            </value>
            <value>
                <fullName>ธ.ไทยพาณิชย์ (SCB)</fullName>
            </value>
            <value>
                <fullName>ธ.อิสลามแห่งประเทศไทย (ISBT)</fullName>
            </value>
            <value>
                <fullName>บมจ.ธนาคารทิสโก้ (TSCO)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>