force-app/main/default/objects/Case/fields/Correct_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Correct_Target_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ชื่อบัญชีผู้รับโอนที่ถูกต้อง</label>
    <length>255</length>
    <type>Text</type>
</CustomField>