force-app/main/default/objects/Case/fields/Created_By_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Branch_Code__c</fullName>
    <formula>CreatedBy.RTL_Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Branch Code</label>
    <type>Text</type>
</CustomField>