force-app/main/default/objects/Case/fields/Created_By_Region_Group__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Region_Group__c</fullName>
    <formula>CreatedBy.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Region / Group</label>
    <type>Text</type>
</CustomField>