force-app/main/default/objects/Case/fields/Created_Channel__c.field-meta.xml
<CustomField>
    <fullName>Created_Channel__c</fullName>
    <formula>TEXT(CreatedBy.RTL_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Channel</label>
    <type>Text</type>
</CustomField>