force-app/main/default/objects/Case/fields/Created_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_ID__c</fullName>
    <formula>if(CreatedBy.Employee_ID__c = &apos;&apos;, &apos;Auto&apos;,CreatedBy.Employee_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created ID</label>
    <type>Text</type>
</CustomField>