force-app/main/default/objects/Case/fields/Created_Phone__c.field-meta.xml
<CustomField>
    <fullName>Created_Phone__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Phone</label>
    <type>Text</type>
</CustomField>