force-app/main/default/objects/Case/fields/Created_profile__c.field-meta.xml
<CustomField>
    <fullName>Created_profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created profile</label>
    <type>Text</type>
</CustomField>