force-app/main/default/objects/Case/fields/CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_ID__c</fullName>
    <formula>Opportunity__r.CAID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM ID</label>
    <type>Text</type>
</CustomField>