force-app/main/default/objects/Case/fields/CS_Act_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_Act_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS วันทำนิติกรรม</label>
    <type>Date</type>
</CustomField>