force-app/main/default/objects/Case/fields/CS_Comment__c.field-meta.xml
<CustomField>
    <fullName>CS_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Comment</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>